# wheelhive

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CREDITS.md  LICENSE  README.md  SETUP_TOOLING.md  check.sh  get_data.sh  mypy.ini  pyproject.toml  requirements-web.txt  requirements.txt  restart_and_run.sh  unittests.sh  wheelhive.service
.github/workflows/: ci.yml
deploy/: DEPLOY.md  wheelhive-web.service
doc/: TESTING_RECOMMENDATION.md  TESTING_SUMMARY.md  TOOLING_MIGRATION.md  admin_commands_reference.md  admin_commands_visual_guide.md  admin_guide.md  admin_quick_reference.md  bot_value_opportunities.md  community_knowledge_integration.md  database_schema.md  digest_configuration_changes.md  digest_model_comparison.md  digest_workflow_analysis.md  discord_message_harvesting.md  discord_web_testing_archive.md  image_processing_architecture.md  image_queue_implementation.md  llm_analysis_setup.md  mcp_log_analysis_and_fixes.md  mcp_server_reference.md  metrics_system.md  ollama_failover_setup.md  revenue_model_planning.md  terminology_analysis_summary.md  test_llm_queries.md  vision_analysis_queries.md  vision_model_comparison.md  wheelhive.md  yahoo_finance_mcp_integration.md
doc/rag/: ai_assistant_configuration.md  greeks_pdf_analysis.md  guild_specific_rag_design.md  income_executive_guild_content.md  rag_knowledge_base_guide.md  rag_pdf_loading_guide.md
doc/web/: admin.html
docs/superpowers/plans/: 2026-07-05-wheelhive-web-companion.md
scripts/: backup.sh  batch_reprocess_trades.py  check_channel_access.py  check_news_channel.py  check_ocr_status.py  generate_all_digests.py  generate_historical_digests.py  harvest_history.py  list_channels.py  migrate_from_production.sh  migrate_settings_to_db.py  normalize_channel_names.py  purge_messages.py  reharvest_messages.py
scripts/rag/: chunk_documents.py  create_vector_store.py  extract_pdfs.py  test_rag_query.py
src/: active_tickers.py  admin_faq_modal.py  ai_assistant_modal.py  baseparser.py  bot.py  bot_downloads.py  bot_upload_identifier.py  bot_uploads.py  cli.py  constants.py  daily_digest.py  db.py  db_util.py  deposit.py  deposits.py  df_stats.py  discord_admin_commands.py  dividend.py  dividends.py  extrinsicvalue.py  faq_manager.py  guild_channels.py  guild_objects.py  llm_analyzer.py  llm_models.py  llm_provider.py  lookup.py  market_sentiment.py  message.py  messages.py  messages_async.py  metrics.py  news_digest.py  news_feed.py  ollama_client.py  pagination.py  pop_calculator.py  positions.py  positions_renderer.py  quote.py  (+23 more)
src/brokers/: __init__.py  basecsvprocessor.py  basetableprocessor.py  fidelity_deposits.py  fidelity_dividends.py  fidelity_options.py  fidelity_shares.py  ibkr_dividends.py  ibkr_options.py  ibkr_shares.py  ibkr_tx_history_deposits.py  ibkr_tx_history_dividends.py  ibkr_tx_history_options.py  ibkr_tx_history_shares.py  parsefactory.py  robinhood_dividends.py  robinhood_options.py  robinhood_shares.py  schwab_dividends.py  schwab_options.py  schwab_shares.py
src/cli/: __init__.py  admin.py  analytics.py  base.py  brokerage.py  channels.py  knowledge.py  llm.py  messages.py  reports.py  scanner.py  tickers.py  tutor.py  tx.py  watchlist.py
src/easyocr_server/: README.md  easyocr-server.service  server.py
src/mcp/: README.md  __init__.py  mcp_server.py  mcp_server.service  open_webui_prompt.md  test_new_tools.py  wheelhive-api.service  wheelhive_api.py
src/providers/: __init__.py  finnhub_provider.py  market_data_factory.py  market_data_provider.py  yfinance_provider.py
src/queues/: __init__.py  image_processing_queue.py  sentiment_processing_queue.py
src/rag/: __init__.py  question_classifier.py  retriever.py  tutor.py  vector_store.py
src/web/: app.py  auth.py  config.py  deps.py
src/web/routes/: positions.py
src/web/static/: index.html
src/web/static/assets/: index-BKI18LZz.js  index-Brd10bME.css  index-CfJVhz78.js
tests/: __init__.py  basetableprocesor_test.py  bot_upload_identifier_test.py  bot_uploads_test.py  cli_integration_test.py  db_test.py  dividends_test.py  extrinsicvalue_test.py  market_data_factory_test.py  market_data_provider_test.py  message_harvesting_test.py  schema_migration_test.py  share_test.py  ta_service_test.py  technical_analysis_test.py  test_constants_no_discord.py  test_data_factory.py  test_llm_integration.py  test_logging_setup.py  tickers_test.py  trade_test.py  util_test.py
tests/web/: conftest.py  test_app.py  test_auth.py  test_df_stats_empty.py  test_positions_api.py
web-ui/: package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  Dashboard.tsx  Grids.tsx  Login.tsx  api.ts  index.css
